refactor: update validation handler backend
